    Added: Rspamd package - Provides spam filtering system
    Removed: Net2ftp package. See the errata file for further explanation.

PLUGINS
    Updated: API version to 1.5.1

TOOLS
    Backported: imscp-get-master-sql-user-pwd.pl script from 1.6.x branch (Script that make possible to retrieve i-MSCP master SQL user and password)

YOUTRACK
    IP-1689 Wrong link for password reset when using PanelRedirect plugin or core proxy feature to make the panel available through standard ports
    IP-1745 Rsyslog log rotation failure -- Initctl command (Upstart) doesn't know the 'rotate' action -- Ubuntu 14.04/Trusty Thar
    IP-1751 CLIENT_DOMAIN_ALT_URLS configuration parameter always reseted
    IP-1756 Reseller overview page is loading too slow due to a slow SQL query
    IP-1785 Exception in circular email feature (admin and reseller interfaces)
    IP-1786 Customer assignment (to reseller) not showing all clients
    IP-1787 Typo in external mail feature activation
    IP-1791 Error message when calculating disk quota - Cannot start new SQL transaction on an automatic reconnect
    IP-1792 When changing the document root of a domain with a folder that holds a space in its name, the Apache2 server is crashing
    IP-1793 CLIENT_DOMAIN_ALT_URLS Value in preseed file
    IP-1795 When editing a mailbox, the quota value is reset to 10 MiB while it should stay to it current quota value

------------------------------------------------------------------------------------------------------------------------
1.5.3
------------------------------------------------------------------------------------------------------------------------

2018-05-16: Laurent Declercq
    RELEASE i-MSCP 1.5.3

BACKEND
    Backport: Fix for #IP-1758 (Could not remove HTTPD log directory -- The immutable bit is removed too late) from 1.6.x branch
    Fixed: Couldn't restore backup archive - Can't locate object method "selectall_array" via package "DBI::db" (restore backup feature)