@@ -1,56 +1,0 @@
-# -*- mode: ruby -*-
-# vi: set ft=ruby :
-
-Vagrant.configure("2") do |config|
-  # All Vagrant configuration is done here. The most common configuration
-  # options are documented and commented below. For a complete reference,
-  # please see the online documentation at vagrantup.com.
-
-  # Every Vagrant virtual environment requires a box to build off of.
-  #config.vm.box = "jessie64"
-
-  # The url from where the 'config.vm.box' box will be fetched if it
-  # doesn't already exist on the user's system.
-  #config.vm.box_url = "https://atlas.hashicorp.com/debian/boxes/jessie64/versions/8.7.0/provider/virtualbox.box"
-
-  # Create a forwarded port mapping which allows access to a specific port
-  # within the machine from a port on the host machine. In the example below,
-  # accessing "localhost:8080" will access port 80 on the guest machine.
-  # config.vm.network :forwarded_port, guest: 80, host: 8080
-  # config.vm.network :forwarded_port, guest: 443, host: 8443
-
-  # Provisioning 
-
-  # Create a private network, which allows host-only access to the machine
-  # using a specific IP.
-  # config.vm.network :private_network, ip: "192.168.56.10"
-  # config.vm.network :private_network
-
-  # Create a public network, which generally matched to bridged network.
-  # Bridged networks make the machine appear as another physical device on
-  # your network.
-  config.vm.network :public_network
-
-  # Provider-specific configuration so you can fine-tune various
-  # backing providers for Vagrant. These expose provider-specific options.
-
-  # Drop the memory requirement to 1024 for now.
-  config.vm.provider :virtualbox do |vb, override|
-    vb.customize ["modifyvm", :id, "--memory", "1024"]
-    override.vm.box = "jessie64"
-    override.vm.box_url = "https://atlas.hashicorp.com/debian/boxes/jessie64/versions/8.7.0/providers/virtualbox.box"
-  end
-
-  config.vm.provider :lxc do |lxc, override|
-    lxc.cgroup.memory.limit_in_bytes='1024'
-    override.vm.box = "jessie64"
-    override.vm.box_url = "https://atlas.hashicorp.com/debian/boxes/jessie64/versions/8.7.0/providers/lxc.box"
-  end
-
-  # Provision i-MSCP
-  config.vm.provision "shell", path: "docs/vagrant/scripts/aptupdate.sh"
-  config.vm.provision "shell", path: "docs/vagrant/scripts/setlang.sh"
-  config.vm.provision "shell", path: "docs/vagrant/scripts/installreqs.sh"
-  config.vm.provision "shell", path: "docs/vagrant/scripts/createpreseed.sh"
-  config.vm.provision "shell", path: "docs/vagrant/scripts/install.sh"
-end
