@@ -1,3 +1,0 @@
-#!/bin/sh
-cd /vagrant/
-./imscp-autoinstall --debug --noprompt --preseed /tmp/preseed.pl
