@@ -1,2 +1,0 @@
-#!/bin/sh
-DEBIAN_FRONTEND=noninteractive apt-get -y install libnet-ip-perl
