@@ -57,6 +57,18 @@ PLUGINS
 TOOLS
     Backported: imscp-get-master-sql-user-pwd.pl script from 1.6.x branch (Script that make possible to retrieve i-MSCP master SQL user and password)
 
+VAGRANT
+    Enhancement: Make users able to choice between many distributions
+    Fixed: Can't locate Data/Validate/IP.pm in @INC (i-MSCP provision scripts)
+    Fixed: Unable to locate package language-pack-en (i-MSCP provision scripts)
+    Fixed: Make sure that Vagrant box is up-to-date before i-MSCP provisioning
+    Fixed: Reboot the Vagrant box before provisioning it with i-MSCP (needed in case of kernel update)
+    Fixed: Setup i-MSCP with public IP address (i-MSCP provision scripts)
+    Merged: i-MSCP Vagrant provision scripts
+    Updated: Vagrant box to vanilla Debian 9.1/Stretch from Vagrant Cloud (default Vagrant box)
+    Review: Copy i-MSCP archive directory content under /user/local/src/imscp Vagrant box directory
+    Review: Disable automatic box update checking in VagrantFile
+
 YOUTRACK
     IP-1689 Wrong link for password reset when using PanelRedirect plugin or core proxy feature to make the panel available through standard ports
     IP-1745 Rsyslog log rotation failure -- Initctl command (Upstart) doesn't know the 'rotate' action -- Ubuntu 14.04/Trusty Thar
